<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ClienteFragment">

    <TextView
        android:id="@+id/tvListaC"
        android:layout_width="320dp"
        android:layout_height="141dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <Button
        android:id="@+id/btInserirC"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:text="@string/btn_inserir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btExcluirC"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:text="@string/btn_excluir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btListarC"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:text="@string/btn_listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btBuscarC"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:text="@string/btn_buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btModificarC"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:text="@string/btn_modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNumeroC"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:hint="@string/et_numero"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etNomeouRZ"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCepC"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/et_cep"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etCPFouCNPJ"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCodigoC"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/et_codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCPFouCNPJ"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/et_cpf"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toEndOf="@+id/etCodigoC"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeouRZ"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:hint="@string/et_nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgTipoC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026">

        <RadioButton
            android:id="@+id/rbtFisica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbt_fisica" />

        <RadioButton
            android:id="@+id/rbtJuridica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbt_juridica" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>