<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OSFragment" >

    <Button
        android:id="@+id/btGerar"
        android:layout_width="271dp"
        android:layout_height="107dp"
        android:layout_marginTop="156dp"
        android:text="@string/btn_gerarOS"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbConsultoria"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_consultoria" />

        <RadioButton
            android:id="@+id/rbManutencao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_manutencao" />
    </RadioGroup>

    <Button
        android:id="@+id/btConsultar"
        android:layout_width="271dp"
        android:layout_height="107dp"
        android:layout_marginTop="292dp"
        android:text="@string/btn_consultarOS"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>